tests/integration/snapshots/integration__simple_additions__duplicate_prompt_entries_bug.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "file.txt",
            entries: [
                AttestationEntry {
                    hash: "d6f9ad9",
                    line_ranges: [
                        Range(
                            3,
                            4,
                        ),
                        Range(
                            6,
                            8,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "initial",
        prompts: {
            "d6f9ad9": PromptRecord {
                agent_id: AgentId {
                    tool: "mock_ai",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User <test@example.com>",
                ),
                messages: [],
                total_additions: 5,
                total_deletions: 0,
                accepted_lines: 5,
            },
        },
    },
}
