tests/integration/snapshots/integration__simple_additions__human_adds_then_ai_modifies_then_human_deletes.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
    3: "Test User",
    4: "Test User",
}
