tests/integration/snapshots/integration__simple_additions__interleaved_staged_unstaged_hunks.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "test.ts",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Single(
                            2,
                        ),
                        Range(
                            6,
                            7,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "37595bbba1d6b917a7b15f4a956ef6d60a3d1168",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 5,
                total_deletions: 2,
                accepted_lines: 5,
                overriden_lines: 0,
            },
        },
    },
}
