tests/integration/snapshots/integration__simple_additions__multiple_ai_sessions_with_line_level_staging-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
    3: "Test User",
    4: "cursor",
    5: "Not Committed Yet",
}
