tests/integration/snapshots/integration__simple_additions__multiple_ai_sessions_with_line_level_staging.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "test.ts",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            3,
                            5,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "048d69c4a04d183327c0182f27d4b9004a1db9de",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User",
                ),
                messages: [],
                total_additions: 3,
                total_deletions: 0,
                accepted_lines: 3,
                overriden_lines: 0,
            },
        },
    },
}
