tests/integration/snapshots/integration__simple_additions__multiple_ai_sessions_with_partial_staging-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "cursor",
    3: "cursor",
}
