tests/integration/snapshots/integration__simple_additions__multiple_overwrites_at_top-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "Test User",
}
